# NeedleTimeSheet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
requests/: create_appropriation_post.json
src/: cli_helpers.py  client.py  compute.py  config.py  main.py  models.py  utils.py
