[project]
name = "needletimesheet"
version = "0.1.0"
description = "CLI tool that reads your clock-in/out periods from Needle, lets you allocate hours across projects with arrow keys, and submits the timesheet — no dropdown clicking required. Reads auth cookies from Firefox or Chrome."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kaius de Paula Correa"}]
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.scripts]
needle = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"
"src/client.py" = "client.py"
"src/models.py" = "models.py"
"src/utils.py" = "utils.py"
"src/compute.py" = "compute.py"
"src/cli_helpers.py" = "cli_helpers.py"
"src/config.py" = "config.py"